--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -170,7 +170,7 @@
                   </div>
                 </div>
               </div>
-              <div class="overflow-x-auto">
+              <div class="overflow-x-auto flex items-center flex-col">
                 <table
                   class="w-full text-sm text-left text-gray-500 dark:text-gray-400"
                 >
@@ -188,7 +188,7 @@
                   <tbody>
                     <tr
                       data-th-object="${c}"
-                      data-th-each="c : ${contacts}"
+                      data-th-each="c : ${pageContact.content}"
                       class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600 transition-colors duration-200"
                     >
                       <td class="px-6 py-4">
@@ -357,6 +357,73 @@
                     </tr>
                   </tbody>
                 </table>
+                <!-- pagination -->
+                <div class="pagination-container p-5 text-center">
+                  <nav aria-label="Page navigation example">
+                    <ul class="flex items-center -space-x-px h-10 text-base">
+                      <li data-th-unless="${pageContact.first}">
+                        <a
+                          data-th-href="@{'/user/contacts?size='+${pageSize}+'&page=' + ${pageContact.number - 1}}"
+                          href="#"
+                          class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                        >
+                          <span class="sr-only">Previous</span>
+                          <svg
+                            class="w-3 h-3 rtl:rotate-180"
+                            aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 6 10"
+                          >
+                            <path
+                              stroke="currentColor"
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="M5 1 1 5l4 4"
+                            />
+                          </svg>
+                        </a>
+                      </li>
+                      <li
+                        data-th-each="i : ${#numbers.sequence(1, pageContact.totalPages)}"
+                      >
+                        <a
+                          th:classappend="${i == pageContact.number + 1} ? 'bg-gray-300 dark:bg-gray-950' : 'bg-white dark:bg-gray-800'"
+                          data-th-href="@{'/user/contacts?size='+${pageSize}+'&page=' + ${i - 1}}"
+                          data-th-text="${i}"
+                          class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 border border-gray-300 hover:bg-gray-100 hover:text-gray-700  dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                          >1</a
+                        >
+                      </li>
+
+                      <li data-th-unless="${pageContact.last}">
+                        <a
+                          data-th-href="@{'/user/contacts?size='+${pageSize}+'&page=' + ${pageContact.number + 1}}"
+                          href="#"
+                          class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                        >
+                          <span class="sr-only">Next</span>
+                          <svg
+                            class="w-3 h-3 rtl:rotate-180"
+                            aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 6 10"
+                          >
+                            <path
+                              stroke="currentColor"
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="m1 9 4-4-4-4"
+                            />
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
               </div>
             </div>
           </div>
