--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -10,7 +10,7 @@
       <div th:if="${loggedInUser}" class="w-full">
         <div data-th-replace="~{user/sidebar::sidebar}"></div>
       </div>
-      <div class="pl-64 pt-20" id="content">
+      <div class="sm:pl-64 pt-20" id="content">
         <div class="contacts_container p-4 sm:p-6 lg:p-8">
           <div
             class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden"
