fix: flowbite skill issue

--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -354,12 +354,12 @@
                     </ul>
                   </nav>
                 </div>
-              
               </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- <div data-th-replace="~{user/contact_modals :: contact}"></div> -->
     </div>
   </body>
 </html>
