--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -307,9 +307,7 @@
                         >
                           <span class="sr-only">Previous</span>
                           <svg
-                            class="w-3 h-3 rtl:rotate-180"
-                            aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg"
+                            class="w-3 h-3 rtl:rotate-180"                            xmlns="http://www.w3.org/2000/svg"
                             fill="none"
                             viewBox="0 0 6 10"
                           >
@@ -344,7 +342,6 @@
                           <span class="sr-only">Next</span>
                           <svg
                             class="w-3 h-3 rtl:rotate-180"
-                            aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg"
                             fill="none"
                             viewBox="0 0 6 10"
