--- a/src/main/resources/templates/user/user_navbar.html
+++ b/src/main/resources/templates/user/user_navbar.html
@@ -6,6 +6,7 @@
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
     <button
+      id="open-sidebar"
       data-drawer-target="logo-sidebar"
       data-drawer-toggle="logo-sidebar"
       aria-controls="logo-sidebar"
@@ -15,7 +16,6 @@
       <span class="sr-only">Open sidebar</span>
       <svg
         class="w-6 h-6"
-        aria-hidden="true"
         fill="currentColor"
         viewBox="0 0 20 20"
         xmlns="http://www.w3.org/2000/svg"
@@ -130,6 +130,7 @@
       <button
         data-collapse-toggle="navbar-cta"
         type="button"
+        id="mobile-menu-toggle"
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
         aria-controls="navbar-cta"
         aria-expanded="false"
@@ -137,7 +138,6 @@
         <span class="sr-only">Open main menu</span>
         <svg
           class="w-5 h-5"
-          aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
           viewBox="0 0 17 14"
