--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ContactHive | Add Contact</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <style>
       @keyframes pulse {
         0%,
@@ -375,5 +375,8 @@
         </div>
       </div>
     </div>
+    <script>
+      console.log("add_contact log");
+    </script>
   </body>
 </html>
