--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -103,8 +103,7 @@
                 <div
                   class="flex items-center justify-center space-x-2 text-gray-500 dark:text-gray-400"
                 >
-                 
-                    <span>Oops! No contacts found in your hive</span>
+                  <span>Oops! No contacts found in your hive</span>
                 </div>
               </div>
               <div
@@ -232,7 +231,8 @@
                       </td>
                       <td class="px-6 py-4">
                         <div class="flex items-center justify-center space-x-2">
-                          <button
+                          <a
+                            data-th-href="@{'contacts/view/' + ${c.id}}"
                             class="text-blue-600 hover:text-blue-900 dark:text-blue-500 dark:hover:text-blue-400 transition-colors duration-200"
                           >
                             <svg
@@ -249,7 +249,7 @@
                                 d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"
                               ></path>
                             </svg>
-                          </button>
+                          </a>
                           <!-- <a
                             data-th-href="@{/user/contacts/delete/{id}(id=${c.id})}"
                           > -->
